RM-1067: add remote node agent
